# python-boilerplate-core

./: .gitignore  README.md  pyproject.toml
.github/workflows/: unit-tests.yml
src/result/: __init__.py  base.py  nothing.py
src/result/guards/: __init__.py  base.py
src/result/types/: __init__.py  base.py
src/result/utils/: __init__.py  helpers.py
tests/: result_test.py  test_result.py
